estructura pagina de inicio

--- a/html/menu.html
+++ b/html/menu.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOBERBIO | Bistro Contemporaneo en Bogota</title>
 </head>
 <body>
-    
+    <h2>Logo</h2>
 
-    
+    <h1>Menu</h1>
+
+</body>
+</html>
 </body>
 </html>
