--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOBERBIO | Bistro Contemporaneo en Bogota</title>
-    
 </head>
 <body>
     <h2>Logo</h2>
-    
+
+    <h1>Contacto</h1>
+
 </body>
 </html>
