--- a/html/reservar.html
+++ b/html/reservar.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOBERBIO | Bistro Contemporaneo en Bogota</title>
 </head>
 <body>
-    
+    <h2>Logo</h2>
+
+    <h1>Reservar</h1>
+
 </body>
 </html>
