--- a/html/inicio.html
+++ b/html/inicio.html
@@ -12,6 +12,7 @@
     html { scroll-behavior: smooth; }
   </style>
   <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
@@ -21,7 +22,7 @@
    </a>
 
 
-  <!-- Menú principal (sin <nav>) -->
+  <!-- Menú principal -->
   <ul>
     <li><a href="inicio.html">Inicio</a></li>
     <li><a href="#nosotros">Nosotros</a></li>
@@ -32,7 +33,10 @@
     <li><a href="#chef">Chef</a></li>
   </ul>
 
-  <h1>SOBERBIO</h1>
+  <a id="logo-principal">
+  <img src="../images/logos/logoPrincipal.png" alt="Logo principal" height="500" />
+
+  </a>
 
   <!-- Secciones con IDs -->
   <section id="nosotros">
@@ -105,11 +109,11 @@
 
     <!-- Redes -->
     <div class="social">
-      <a href="https://www.instagram.com/soberbio.bistro/" target="_blank"><img src="../images/logos/instagram-brands-solid-full.svg" height="30" alt="Instagram"></a>
-      <a href="https://wa.me/573155095645" target="_blank"><img src="../images/logos/whatsapp-brands-solid-full.svg" height="30" alt="WhatsApp"></a>
-      <a href="https://apps.apple.com/es/app/facetime/id1110145091" target="_blank"><img src="../images/logos/phone-volume-solid-full.svg" height="30" alt="Teléfono"></a>
-      <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../images/logos/facebook-brands-solid-full.svg" height="30" alt="Facebook"></a>
-      <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img src="../images/logos/map-location-solid-full.svg" height="30" alt="Maps"></a>
+      <a href="https://www.instagram.com/soberbio.bistro/" target="_blank"><img src="../images/logos/instagram.png" height="40" alt="Instagram"></a>
+      <a href="https://wa.me/573155095645" target="_blank"><img src="../images/logos/whatsapp.png" height="40" alt="WhatsApp"></a>
+      <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../images/logos/facebook.png" height="40" alt="Facebook"></a>
+      <a href="https://apps.apple.com/es/app/facetime/id1110145091" target="_blank"><img src="../images/logos/phone.png" height="40" alt="Teléfono"></a>
+      <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img src="../images/logos/location.png" height="40" alt="Maps"></a>
     </div>
   </footer>
 
