--- a/html/inicio.html
+++ b/html/inicio.html
@@ -17,7 +17,7 @@
 <body>
 
   <!-- Logo superior -->
-   <a href="inicio.html">
+   <a href="inicio.html" id="logo-superior">
     <img src="../images/logos/logoPrincipalMinimalista.png" height="100" alt="Logo SOBERBIO" />
    </a>
 
@@ -32,23 +32,31 @@
     <li><a href="reservar.html">Reservar</a></li>
     <li><a href="#chef">Chef</a></li>
   </ul>
+  
 
   <a id="logo-principal">
   <img src="../images/logos/logoPrincipal.png" alt="Logo principal" height="500" />
 
   </a>
 
+  <div id="cuerpo">
+
   <!-- Secciones con IDs -->
   <section id="nosotros">
     <h2>Nosotros</h2>
-    <p>Texto sobre nosotros…</p>
-    <button onclick="location.href='reservar.html'">RESERVAR</button>
+    <p>Soberbio es un bistró contemporáneo colombiano, ubicado en el corazón de Bogotá. Bajo la dirección del chef Hugo Rodallega, este espacio culinario se distingue por su elegancia y por una propuesta gastronómica que rinde homenaje a los productores locales, exaltando los sabores auténticos de la región a través de ingredientes frescos y cuidadosamente seleccionados.</p>
+    <button> VER GALERIA</button>
   </section>
 
   <section id="acerca">
     <h2>Acerca de</h2>
-    <p>Texto sobre la sección Acerca de…</p>
-    <button onclick="location.href='gallery.html'">VER GALERÍA</button>
+    <p>Cada creación de Soberbio rinde homenaje a la riqueza de la tierra colombiana, inspirándose en la diversidad de sus productores. Nuestro menú evoluciona al compás de la naturaleza, aprovechando cada ingrediente en su máximo esplendor. <br> <strong>Ofrecemos:</strong></p>
+    <ul>
+      <li>Menú a la carta</li>
+      <li>Menú degustación</li>
+      <li>Opciones vegetarianas</li>
+    </ul>
+    <button>RESERVAR</button>
   </section>
 
   <section id="inspiracion">
@@ -87,6 +95,8 @@
     <h2>Prensa</h2>
     <p>Notas de prensa…</p>
   </section>
+
+  </div>
 
   <hr />
 
