--- a/html/inicio.html
+++ b/html/inicio.html
@@ -34,10 +34,14 @@
   </ul>
   
 
-  <a id="logo-principal">
+  <div id="presentacion">
+    <a id="logo-principal">
   <img src="../images/logos/logoPrincipal.png" alt="Logo principal" height="500" />
 
   </a>
+  </div>
+
+  
 
   <div id="cuerpo">
 
