--- a/html/inicio.html
+++ b/html/inicio.html
@@ -16,22 +16,31 @@
 </head>
 <body>
 
-  <!-- Logo superior -->
-   <a href="inicio.html" id="logo-superior">
-    <img src="../images/logos/logoPrincipalMinimalista.png" height="100" alt="Logo SOBERBIO" />
-   </a>
+   <nav class="navbar">
+    <a href="inicio.html" id="logo-superior">
+      <img src="../images/logos/logoPrincipalMinimalista.png" height="100" alt="Logo SOBERBIO" />
+    </a>
+    <div class="nav-actions">
+      <a href="reservar.html" class="btn-reservar-top">RESERVAR</a>
+      <button id="menu-toggle" class="menu-toggle" aria-label="Menú">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
+  </nav>
 
-
-  <!-- Menú principal -->
-  <ul>
-    <li><a href="inicio.html">Inicio</a></li>
-    <li><a href="#nosotros">Nosotros</a></li>
-    <li><a href="#awards">Awards</a></li>
-    <li><a href="#contacto">Contacto</a></li>
-    <li><a href="#prensa">Prensa</a></li>
-    <li><a href="reservar.html">Reservar</a></li>
-    <li><a href="#chef">Chef</a></li>
-  </ul>
+  <div id="menu-overlay" class="menu-overlay">
+    <ul>
+      <li><a href="inicio.html">Inicio</a></li>
+      <li><a href="#nosotros">Nosotros</a></li>
+      <li><a href="#awards">Awards</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+      <li><a href="#prensa">Prensa</a></li>
+      <li><a href="reservar.html">Reservar</a></li>
+      <li><a href="#chef">Chef</a></li>
+    </ul>
+  </div>
   
 
   <div id="presentacion">
