--- a/html/menu.html
+++ b/html/menu.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOBERBIO | Bistro Contemporaneo en Bogota</title>
+    <title>Document</title>
 </head>
 <body>
-    <h2>Logo</h2>
-
-    <h1>Menu</h1>
-
-</body>
-</html>
+    
 </body>
 </html>
