se agregaron imagenes alusivas en cada seccion

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -59,6 +59,8 @@
     <h2>Nosotros</h2>
     <p>Soberbio es un bistró contemporáneo colombiano, ubicado en el corazón de Bogotá. Bajo la dirección del chef Hugo Rodallega, este espacio culinario se distingue por su elegancia y por una propuesta gastronómica que rinde homenaje a los productores locales, exaltando los sabores auténticos de la región a través de ingredientes frescos y cuidadosamente seleccionados.</p>
     <button> VER GALERIA</button>
+  <img src="../images/personas/cocineros.png" height="600px" alt="cocineros" >
+
   </section>
 
   <section id="acerca">
@@ -70,22 +72,26 @@
       <li>Opciones vegetarianas</li>
     </ul>
     <button>RESERVAR</button>
+    <img src="../images/personas/comedor.png" height="400px"alt="comedor">
   </section>
 
   <section id="inspiracion">
     <h2>Inspiración</h2>
     <p>Texto sobre inspiración…</p>
+    <img src="../images/platos/inspiracion.png" height="600px" alt="Inspiración">
   </section>
 
   <section id="chef">
-    <h2>El Chef, Álvaro Clavijo</h2>
+    <h2>El Chef, Hugo Rodallega</h2>
     <p>Texto sobre el chef…</p>
     <button onclick="location.href='reservar.html'">RESERVAR</button>
+    <img src="../images/personas/chef.png" height="600px" alt="Chef">
   </section>
 
   <section id="equipo">
     <h2>El Equipo</h2>
     <p>Texto sobre el equipo…</p>
+    <img src="../images/personas/equipo.png" height="600px" alt="Equipo">
   </section>
 
   <section id="awards">
