--- a/html/inicio.html
+++ b/html/inicio.html
@@ -11,6 +11,7 @@
   <style>
     html { scroll-behavior: smooth; }
   </style>
+  
   <link rel="stylesheet" href="../css/styles.css" />
   
 </head>
@@ -100,20 +101,44 @@
   </section>
 
   <section id="contacto">
-    <h2>Contacto</h2>
-    <p>WhatsApp: +57 3155095645</p>
-    <p>Teléfono: +57 (601) 743 9931</p>
-  </section>
+  <h1>Contacto</h1>
+
+  <div class="contacto-grid">
+    <!-- Columna izquierda -->
+    <div>
+      <h3>Horarios</h3>
+      <p>Lunes a Sábados: 12:00pm - 11:00pm</p>
+      <p>Domingo: 12:00pm - 05:00pm</p>
+      <p>WhatsApp: <a href="https://wa.me/573155095645">+57 3155095645</a></p>
+      <p>Teléfono: <a href="tel:+576017439931">+57 (601) 743 9931</a></p>
+    </div>
+
+    <!-- Columna derecha -->
+    <div>
+      <h3>Inquiries</h3>
+      <p>Reservas: <a href="mailto:reservas@soberbio.com">reservas@soberbio.com</a></p>
+      <p>Business: <a href="mailto:marketing@soberbio.com">marketing@soberbio.com</a></p>
+      <p>Public Relations y Alianzas: <a href="mailto:pr@soberbio.com">pr@soberbio.com</a></p>
+      <p>Eventos: <a href="mailto:eventos@soberbio.com">eventos@soberbio.com</a></p>
+      <p>Trabaja con Nosotros: <a href="mailto:admin@soberbio.com">admin@soberbio.com</a></p>
+    </div>
+  </div>
+</section>
+
 
   <section id="ubicacion">
-    <h2>Ubicación</h2>
-    <p>Mapa aquí…</p>
-  </section>
+  <h2>Ubicación</h2>
+  <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.999999999!2d-74.063644!3d4.610868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5c5c5c5c5c5c5c5c!2sSOBERBIO!5e0!3m2!1ses!2sco!4v1699999999999"
+    width="100%" 
+    height="400" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</section>
 
-  <section id="prensa">
-    <h2>Prensa</h2>
-    <p>Notas de prensa…</p>
-  </section>
 
   </div>
 
