se agrego mapay mas descripciones por seccion

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -78,33 +78,43 @@
 
   <section id="inspiracion">
     <h2>Inspiración</h2>
-    <p>Texto sobre inspiración…</p>
+    <p>Desde su apertura en 2017, Hugo Rodallega ha trabajado estrechamente con pequeños productores colombianos, garantizando platos que no solo deleitan el paladar, sino que también apoyan el desarrollo de la agricultura local. La creatividad y la conexión con la tierra son las fuerzas motrices que inspiran cada creación culinaria para mostrar la biodiversidad de Colombia.</p>
     <img src="../images/platos/inspiracion.png" height="600px" alt="Inspiración">
   </section>
 
   <section id="chef">
     <h2>El Chef, Hugo Rodallega</h2>
-    <p>Texto sobre el chef…</p>
+    <p>Hugo Rodallega es el corazón y alma de Soberbio. Su carrera comenzó en la Escuela de Hostelería Hofmann en Barcelona y continuó en Le Cordon Bleu en París. Con experiencia en restaurantes con estrellas Michelin en París, Nueva York, y Dinamarca, Clavijo ha perfeccionado un estilo que combina la disciplina europea con la creatividad latina. Su visión al fundar El Chato fue redefinir la gastronomía colombiana y posicionarla en el mapa mundial, ofreciendo una experiencia culinaria que trasciende lo convencional.</p>
     <button onclick="location.href='reservar.html'">RESERVAR</button>
     <img src="../images/personas/chef.png" height="600px" alt="Chef">
   </section>
 
   <section id="equipo">
     <h2>El Equipo</h2>
-    <p>Texto sobre el equipo…</p>
+    <p>El equipo de Soberbio comparte la misma pasión y compromiso que su chef. Compuesto por profesionales dedicados, cada miembro contribuye al ambiente cálido y acogedor que distingue al restaurante. Su trabajo colectivo asegura que cada aspecto de la experiencia gastronómica, desde la cocina hasta el servicio, sea excepcional.</p>
     <img src="../images/personas/equipo.png" height="600px" alt="Equipo">
   </section>
 
   <section id="awards">
     <h2>Awards</h2>
-    <p>Texto sobre premios…</p>
+    
+    <p>Hugo Rodallega ha sido reconocido internacionalmente por su excelencia culinaria:</p>
+    <ul>
+        <li><p><strong>2018:</strong>Debutó en el puesto 21 de los Latin America’s 50 Best Restaurants como "Highest New Entry".</p></li>
+        <li><p><strong>2019 y 2020:</strong>Mantuvo el puesto 7 entre los mejores restaurantes de Latinoamérica.</p></li>
+        <li><p><strong>2022:</strong>Ascendió al 5º lugar en Latin America’s 50 Best Restaurants y al puesto 83 en The World’s 50 Best Restaurants. Además, Hugo Rodallega fue clasificado como el chef número 86 en The Best Chef Awards.</p></li>
+        <li><p><strong>2023:</strong>Reconocido como el 2º mejor restaurante de Latinoamérica y el mejor de Colombia, escalando al puesto 33 en The World’s 50 Best Restaurants.</p></li>
+        <li><p><strong>2024:</strong>El Chato alcanzó el puesto 25 en The World’s 50 Best Restaurants, consolidándose como líder en la gastronomía mundial y el único restaurante colombiano en la lista.</p></li>
+    </ul>
+    <img src="../images/personas/chefPremio.png" height="600px" alt="Awards">
+    <button>RESERVAR</button>
   </section>
 
   <section id="contacto">
   <h1>Contacto</h1>
 
   <div class="contacto-grid">
-    <!-- Columna izquierda -->
+
     <div>
       <h3>Horarios</h3>
       <p>Lunes a Sábados: 12:00pm - 11:00pm</p>
@@ -113,7 +123,7 @@
       <p>Teléfono: <a href="tel:+576017439931">+57 (601) 743 9931</a></p>
     </div>
 
-    <!-- Columna derecha -->
+    
     <div>
       <h3>Inquiries</h3>
       <p>Reservas: <a href="mailto:reservas@soberbio.com">reservas@soberbio.com</a></p>
