--- a/html/inicio.html
+++ b/html/inicio.html
@@ -57,11 +57,12 @@
 
   <!-- Secciones con IDs -->
   <section id="nosotros">
-    <h2>Nosotros</h2>
-    <p>Soberbio es un bistró contemporáneo colombiano, ubicado en el corazón de Bogotá. Bajo la dirección del chef Hugo Rodallega, este espacio culinario se distingue por su elegancia y por una propuesta gastronómica que rinde homenaje a los productores locales, exaltando los sabores auténticos de la región a través de ingredientes frescos y cuidadosamente seleccionados.</p>
-    <button> VER GALERIA</button>
-  <img src="../images/personas/cocineros.png" height="600px" alt="cocineros" >
-
+    <div class="nosotros-text">
+      <h2>Nosotros</h2>
+      <p>Soberbio es un bistró contemporáneo colombiano, ubicado en el corazón de Bogotá. Bajo la dirección del chef Hugo Rodallega, este espacio culinario se distingue por su elegancia y por una propuesta gastronómica que rinde homenaje a los productores locales, exaltando los sabores auténticos de la región a través de ingredientes frescos y cuidadosamente seleccionados.</p>
+      <button>VER GALERÍA</button>
+    </div>
+    <img src="../images/personas/cocineros.png" alt="cocineros" />
   </section>
 
   <section id="acerca">
