--- a/html/reservar.html
+++ b/html/reservar.html
@@ -8,15 +8,33 @@
 </head>
 <body class="reservar-page">
   <nav class="navbar">
-    <!-- contenido del nav -->
+    <!-- Logo minimalista que redirige a inicio -->
+    <a href="inicio.html" id="logo-superior">
+      <img src="../images/logos/logoPrincipalMinimalista.png" height="100" alt="Logo SOBERBIO" />
+    </a>
+
+    <!-- Acciones de navegación -->
+    <div class="nav-actions">
+      <a href="reservar.html" class="btn-reservar-top">RESERVAR</a>
+      <button id="menu-toggle" class="menu-toggle" aria-label="Menú">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
   </nav>
+
   <div id="menu-overlay" class="menu-overlay">
-    <!-- contenido del menú -->
+    <ul>
+      <li><a href="inicio.html">Inicio</a></li>
+      <li><a href="login.html">Nosotros</a></li>
+      <li><a href="menu.html">Menú</a></li>
+      <li><a href="reservar.html">Reservar</a></li>
+    </ul>
   </div>
 
   <section id="reservas">
-    <div class="reserva-container">
-      <div class="reserva-card">
+    <div class="reserva-card">
         <h2>Elige</h2>
         <p>Número de personas</p>
         <div class="personas">
@@ -47,10 +65,7 @@
           <option value="21:00">21:00</option>
         </select>
       </div>
-      <div class="reserva-accion">
-      </div>
-    </div>
-  </section>
+      </section>
 
   <div class="reserva-accion">
     <button class="btn-reservar-top">RESERVAR</button>
@@ -63,6 +78,22 @@
         btn.classList.add("active");
       });
     });
+
+    const menuToggle = document.getElementById('menu-toggle');
+    const menuOverlay = document.getElementById('menu-overlay');
+    if (menuToggle && menuOverlay) {
+      menuToggle.addEventListener('click', () => {
+        menuOverlay.classList.toggle('open');
+      });
+    }
   </script>
+  
+
+
+
+
+
+   
+ 
 </body>
 </html>
