--- a/html/reservar.html
+++ b/html/reservar.html
@@ -1,99 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Reservar - Soberbio</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Reservar - Soberbio</title>
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
-<body class="reservar-page">
-  <nav class="navbar">
-    <!-- Logo minimalista que redirige a inicio -->
-    <a href="inicio.html" id="logo-superior">
-      <img src="../images/logos/logoPrincipalMinimalista.png" height="100" alt="Logo SOBERBIO" />
-    </a>
 
-    <!-- Acciones de navegación -->
-    <div class="nav-actions">
-      <a href="reservar.html" class="btn-reservar-top">RESERVAR</a>
-      <button id="menu-toggle" class="menu-toggle" aria-label="Menú">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-    </div>
-  </nav>
+<body>
 
-  <div id="menu-overlay" class="menu-overlay">
-    <ul>
-      <li><a href="inicio.html">Inicio</a></li>
-      <li><a href="login.html">Nosotros</a></li>
-      <li><a href="menu.html">Menú</a></li>
-      <li><a href="reservar.html">Reservar</a></li>
-    </ul>
-  </div>
-
-  <section id="reservas">
-    <div class="reserva-card">
-        <h2>Elige</h2>
-        <p>Número de personas</p>
-        <div class="personas">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
+    <div id="toolbar">
+        <div class="left">
+            <a href="../html/inicio.html" id="logo-superior">
+                <img id="toolbar-logo" src="../images/logos/logoPrincipalOscuro.png" alt="Soberbio">
+            </a>
+            <a href="../html/inicio.html">
+                <button>&lt; Volver</button>
+            </a>
         </div>
-      </div>
-     <div class="reserva-card">
-        <h2>Fecha</h2>
-        <p>Selecciona la fecha para tu reserva</p>
-        <input type="date" />
-      </div>
 
-      <div class="reserva-card">
-        <h2>Hora</h2>
-        <p>Selecciona una hora disponible</p>
-        <select>
-          <option value="18:00">18:00</option>
-          <option value="18:30">18:30</option>
-          <option value="19:00">19:00</option>
-          <option value="19:30">19:30</option>
-          <option value="20:00">20:00</option>
-          <option value="20:30">20:30</option>
-          <option value="21:00">21:00</option>
-        </select>
-      </div>
-      </section>
+        <div class="center">
+            <a href="https://www.instagram.com/soberbio.bistro/" target="_blank">
+                <img class="icon" src="../images/logos/instagramOscuro.svg" alt="Instagram">
+            </a>
+            <a href="https://wa.me/573155095645" target="_blank">
+                <img class="icon" src="../images/logos/whatsappOscuro.svg" alt="WhatsApp">
+            </a>
+            <a href="https://www.facebook.com/soberbio.bistro" target="_blank">
+                <img class="icon" src="../images/logos/facebookOscuro.svg" alt="Facebook">
+            </a>
+        </div>
 
-  <div class="reserva-accion">
-    <button class="btn-reservar-top">RESERVAR</button>
-  </div>
+        <div class="right">
+            <a href="../html/login.html" id="login-button">
+                <button>Iniciar Sesión</button>
+            </a>
+        </div>
+    </div>
 
-  <script>
-    document.querySelectorAll(".personas button").forEach(btn => {
-      btn.addEventListener("click", () => {
-        document.querySelectorAll(".personas button").forEach(b => b.classList.remove("active"));
-        btn.classList.add("active");
-      });
-    });
 
-    const menuToggle = document.getElementById('menu-toggle');
-    const menuOverlay = document.getElementById('menu-overlay');
-    if (menuToggle && menuOverlay) {
-      menuToggle.addEventListener('click', () => {
-        menuOverlay.classList.toggle('open');
-      });
-    }
-  </script>
-  
+
+    <div id="cuerpo-reservar">
+
+    </div>
 
 
 
 
-
-   
- 
 </body>
+
 </html>
