--- a/html/reservar.html
+++ b/html/reservar.html
@@ -15,24 +15,26 @@
             <a href="../html/inicio.html" id="logo-superior">
                 <img id="toolbar-logo" src="../images/logos/logoPrincipalOscuro.png" alt="Soberbio">
             </a>
-            <a href="../html/inicio.html">
-                <button>&lt; Volver</button>
-            </a>
-        </div>
+            <a href="../html/inicio.html" class="btn-volver">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="black" stroke-width="2" viewBox="0 0 24 24">
+    <path d="M15 18l-6-6 6-6"/>
+  </svg>
+  Volver
+</a>
 
-        <div class="center">
-            <a href="https://www.instagram.com/soberbio.bistro/" target="_blank">
-                <img class="icon" src="../images/logos/instagramOscuro.svg" alt="Instagram">
-            </a>
-            <a href="https://wa.me/573155095645" target="_blank">
-                <img class="icon" src="../images/logos/whatsappOscuro.svg" alt="WhatsApp">
-            </a>
-            <a href="https://www.facebook.com/soberbio.bistro" target="_blank">
-                <img class="icon" src="../images/logos/facebookOscuro.svg" alt="Facebook">
-            </a>
+
         </div>
 
         <div class="right">
+            <a href="https://www.instagram.com/soberbio.bistro/" target="_blank" title="Instagram">
+                <img class="icon" src="../images/logos/instagramOscuro.svg" alt="Instagram">
+            </a>
+            <a href="https://wa.me/573155095645" target="_blank" title="WhatsApp ">
+                <img class="icon" src="../images/logos/whatsappOscuro.svg" alt="WhatsApp">
+            </a>
+            <a href="https://www.facebook.com/soberbio.bistro" target="_blank" title="Facebook">
+                <img class="icon" src="../images/logos/facebookOscuro.svg" alt="Facebook">
+            </a>
             <a href="../html/login.html" id="login-button">
                 <button>Iniciar Sesión</button>
             </a>
