--- a/html/reservar.html
+++ b/html/reservar.html
@@ -44,6 +44,20 @@
 
 
     <div id="cuerpo-reservar">
+        <div class="reservar-container">
+    <div class="card">
+      <h2><em>Elige</em></h2>
+      <p>Número de personas</p>
+    </div>
+    <div class="card">
+      <h2><em>Fecha</em></h2>
+      <p>Selecciona la fecha</p>
+    </div>
+    <div class="card">
+      <h2><em>Hora</em></h2>
+      <p>Selecciona una hora disponible</p>
+    </div>
+  </div>
 
     </div>
 
