seccion reservar (falta hora y fotter)

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -91,7 +91,7 @@
                     <li>Menú degustación</li>
                     <li>Opciones vegetarianas</li>
                 </ul>
-                <button>RESERVAR</button>
+               <a href="menu.html"><button>MENU</button></a>
             </div>
 
             <!-- Imagen de comedor -->
