se termino la pagina de menu(falta arreglar el fotter)

--- a/html/menu.html
+++ b/html/menu.html
@@ -1,11 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Menú - Soberbio</title>
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
+
 <body>
-    
+
+  <!-- ====== TOOLBAR ====== -->
+  <div id="toolbar">
+    <div class="left">
+      <a href="../html/inicio.html" id="logo-superior">
+        <img id="toolbar-logo" src="../images/logos/logoPrincipalOscuro.png" alt="Soberbio">
+        
+    </div>
+
+    <div class="right">
+  <a href="../html/reservar.html"><button>Reservar</button></a>
+  <a href="menu.html"><button>Carrito</button></a>
+      <a href="https://www.instagram.com/soberbio.bistro/" target="_blank" title="Instagram">
+        <img class="icon" src="../images/logos/instagramOscuro.svg" alt="Instagram">
+      </a>
+      <a href="https://wa.me/573155095645" target="_blank" title="WhatsApp">
+        <img class="icon" src="../images/logos/whatsappOscuro.svg" alt="WhatsApp">
+      </a>
+      <a href="https://www.facebook.com/soberbio.bistro" target="_blank" title="Facebook">
+        <img class="icon" src="../images/logos/facebookOscuro.svg" alt="Facebook">
+      </a>
+    </div>
+  </div>
+
+  <!-- ====== CUERPO MENÚ ====== -->
+  <div id="cuerpo-menu">
+    <div class="reservar-container">
+
+      <!-- PLATO 1 -->
+      <div class="card">
+        <div class="menu-img">
+          <img src="../images/platos/hamburguesa.png" alt="Hamburguesa Gourmet">
+        </div>
+        <h2 class="titulo-card">Hamburguesa Gourmet</h2>
+        <p class="subtitulo-card">Jugosa carne de res, queso maduro, cebolla caramelizada y pan artesanal.</p>
+        <p><strong>$38.000</strong></p>
+        <button>Añadir al carrito</button>
+      </div>
+
+      <!-- PLATO 2 -->
+      <div class="card">
+        <div class="menu-img">
+          <img src="../images/platos/salchipapa.png" alt="Salchipapa">
+        </div>
+        <h2 class="titulo-card">Salchipapa Especial</h2>
+        <p class="subtitulo-card">Papas fritas artesanales con salchicha  y salsas de la casa.</p>
+        <p><strong>$28.000</strong></p>
+        <button>Añadir al carrito</button>
+      </div>
+
+      <!-- PLATO 3 -->
+      <div class="card">
+        <div class="menu-img">
+          <img src="../images/platos/carneAsada.png" alt="Carne Asada">
+        </div>
+        <h2 class="titulo-card">Carne Asada</h2>
+        <p class="subtitulo-card">Corte de res a la parrilla acompañado de vegetales salteados.</p>
+        <p><strong>$45.000</strong></p>
+        <button>Añadir al carrito</button>
+      </div>
+
+      <!-- PLATO 4 -->
+      <div class="card">
+        <div class="menu-img">
+          <img src="../images/platos/pechugaAsada.png" alt="Pollo Asado">
+        </div>
+        <h2 class="titulo-card">Pollo Asado</h2>
+        <p class="subtitulo-card">Pechuga de pollo marinada y asada lentamente con hierbas frescas.</p>
+        <p><strong>$32.000</strong></p>
+        <button>Añadir al carrito</button>
+      </div>
+
+      <!-- PLATO 5 -->
+      <div class="card">
+        <div class="menu-img">
+          <img src="../images/platos/ceviche.png" alt="Ceviche">
+        </div>
+        <h2 class="titulo-card">Ceviche</h2>
+        <p class="subtitulo-card">Pescado fresco marinado en jugo de limón con cebolla y cilantro.</p>
+        <p><strong>$45.000</strong></p>
+        <button>Añadir al carrito</button>
+      </div>
+      <!-- PLATO 6 -->
+      <div class="card">
+        <div class="menu-img">
+          <img src="../images/platos/pasta.png" alt="Pasta">
+        </div>
+        <h2 class="titulo-card">Pasta Alfredo</h2>
+        <p class="subtitulo-card">Pasta fresca con salsa Alfredo cremosa y queso parmesano.</p>
+        <p><strong>$38.000</strong></p>
+        <button>Añadir al carrito</button>
+      </div>
+
+      <!-- PLATO 7 -->
+      <div class="card">
+        <div class="menu-img">
+          <img src="../images/platos/pizza.png" alt="Pizza">
+        </div>
+        <h2 class="titulo-card">Pizza Gourmet</h2>
+        <p class="subtitulo-card">Masa artesanal, salsa de tomate fresco y ingredientes seleccionados.</p>
+        <p><strong>$40.000</strong></p>
+        <button>Añadir al carrito</button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- ====== FOOTER ====== -->
+  <hr>
+  <footer>
+    <a href="inicio.html">
+      <img src="../images/logos/logoPrincipal.png" height="150" alt="Logo SOBERBIO" title="Inicio" />
+    </a>
+
+    <ul>
+      <li><a href="#nosotros">Nosotros</a></li>
+      <li><a href="#acerca">Acerca de</a></li>
+      <li><a href="#chef">El Chef</a></li>
+      <li><a href="#awards">Awards</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+      <li><a href="#prensa">Prensa</a></li>
+      <li><a href="gallery.html">Galería</a></li>
+    </ul>
+
+    <div class="social">
+      <a href="https://www.instagram.com/soberbio.bistro/" target="_blank"><img src="../images/logos/instagram.png" height="40" alt="Instagram"></a>
+      <a href="https://wa.me/573155095645" target="_blank"><img src="../images/logos/whatsapp.png" height="40" alt="WhatsApp"></a>
+      <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../images/logos/facebook.png" height="40" alt="Facebook"></a>
+      <a href="https://apps.apple.com/es/app/facetime/id1110145091" target="_blank"><img src="../images/logos/phone.png" height="40" alt="Teléfono"></a>
+      <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img src="../images/logos/location.png" height="40" alt="Maps"></a>
+    </div>
+  </footer>
+
 </body>
 </html>
