--- a/html/reservar.html
+++ b/html/reservar.html
@@ -14,12 +14,9 @@
   <div id="toolbar">
     <div class="left">
       <a href="../html/inicio.html" id="logo-superior">
-        <img id="toolbar-logo" src="../images/logos/logoPrincipalOscuro.png" alt="Soberbio">
+        <img id="toolbar-logo" src="../images/logos/logoPrincipalOscuro.png"  alt="Soberbio">
       </a>
-      <a href="../html/inicio.html" class="btn-volver">
-       
-        <span>‹</span> Volver
-      </a>
+    
     </div>
 
     <div class="right">
@@ -34,6 +31,9 @@
       </a>
       <a href="../html/login.html" id="login-button">
         <button>Iniciar Sesión</button>
+      </a>
+      <a href="../html/menu.html" id="menu-button">
+        <button>Ver Menu</button>
       </a>
     </div>
   </div>
