--- a/html/inicio.html
+++ b/html/inicio.html
@@ -174,7 +174,7 @@
                             lista.</p>
                     </li>
                 </ul>
-                <button>RESERVAR</button>
+                <a href="reservar.html"><button>RESERVAR</button></a>
             </div>
 
             <!-- Imagen de premiación -->
