--- a/html/menu.html
+++ b/html/menu.html
@@ -35,83 +35,7 @@
 
   <!-- ====== CUERPO MENÚ ====== -->
   <div id="cuerpo-menu">
-    <div class="reservar-container">
-
-      <!-- PLATO 1 -->
-      <div class="card">
-        <div class="menu-img">
-          <img src="../images/platos/hamburguesa.png" alt="Hamburguesa Gourmet">
-        </div>
-        <h2 class="titulo-card">Hamburguesa Gourmet</h2>
-        <p class="subtitulo-card">Jugosa carne de res, queso maduro, cebolla caramelizada y pan artesanal.</p>
-        <p><strong>$38.000</strong></p>
-        <button>Añadir al carrito</button>
-      </div>
-
-      <!-- PLATO 2 -->
-      <div class="card">
-        <div class="menu-img">
-          <img src="../images/platos/salchipapa.png" alt="Salchipapa">
-        </div>
-        <h2 class="titulo-card">Salchipapa Especial</h2>
-        <p class="subtitulo-card">Papas fritas artesanales con salchicha  y salsas de la casa.</p>
-        <p><strong>$28.000</strong></p>
-        <button>Añadir al carrito</button>
-      </div>
-
-      <!-- PLATO 3 -->
-      <div class="card">
-        <div class="menu-img">
-          <img src="../images/platos/carneAsada.png" alt="Carne Asada">
-        </div>
-        <h2 class="titulo-card">Carne Asada</h2>
-        <p class="subtitulo-card">Corte de res a la parrilla acompañado de vegetales salteados.</p>
-        <p><strong>$45.000</strong></p>
-        <button>Añadir al carrito</button>
-      </div>
-
-      <!-- PLATO 4 -->
-      <div class="card">
-        <div class="menu-img">
-          <img src="../images/platos/pechugaAsada.png" alt="Pollo Asado">
-        </div>
-        <h2 class="titulo-card">Pollo Asado</h2>
-        <p class="subtitulo-card">Pechuga de pollo marinada y asada lentamente con hierbas frescas.</p>
-        <p><strong>$32.000</strong></p>
-        <button>Añadir al carrito</button>
-      </div>
-
-      <!-- PLATO 5 -->
-      <div class="card">
-        <div class="menu-img">
-          <img src="../images/platos/ceviche.png" alt="Ceviche">
-        </div>
-        <h2 class="titulo-card">Ceviche</h2>
-        <p class="subtitulo-card">Pescado fresco marinado en jugo de limón con cebolla y cilantro.</p>
-        <p><strong>$45.000</strong></p>
-        <button>Añadir al carrito</button>
-      </div>
-      <!-- PLATO 6 -->
-      <div class="card">
-        <div class="menu-img">
-          <img src="../images/platos/pasta.png" alt="Pasta">
-        </div>
-        <h2 class="titulo-card">Pasta Alfredo</h2>
-        <p class="subtitulo-card">Pasta fresca con salsa Alfredo cremosa y queso parmesano.</p>
-        <p><strong>$38.000</strong></p>
-        <button>Añadir al carrito</button>
-      </div>
-
-      <!-- PLATO 7 -->
-      <div class="card">
-        <div class="menu-img">
-          <img src="../images/platos/pizza.png" alt="Pizza">
-        </div>
-        <h2 class="titulo-card">Pizza Gourmet</h2>
-        <p class="subtitulo-card">Masa artesanal, salsa de tomate fresco y ingredientes seleccionados.</p>
-        <p><strong>$40.000</strong></p>
-        <button>Añadir al carrito</button>
-      </div>
+    <div class="reservar-container" id="menu-container"></div>
 
     </div>
   </div>
@@ -141,6 +65,8 @@
       <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img src="../images/logos/location.png" height="40" alt="Maps"></a>
     </div>
   </footer>
+
+   <script src="../js/menu.js"></script>
 
 </body>
 </html>
