--- a/html/admind.html
+++ b/html/admind.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +23,9 @@
 
             <button type="submit">Agregar plato</button>
         </form>
+
+        <h2>Platos añadidos</h2>
+        <ul id="platos-list"></ul>
     </div>
 
     <script src="../js/admin.js"></script>
