--- a/html/admind.html
+++ b/html/admind.html
@@ -4,8 +4,9 @@
     <title>Administrar menú</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
-    
+
     <div class="admin-wrapper">
         <h1>Administrar menú</h1>
         <form id="plato-form">
@@ -18,8 +19,9 @@
             <label for="precio">Precio</label>
             <input type="number" id="precio" name="precio" required>
 
-            <label for="imagen">Imagen (URL)</label>
-            <input type="url" id="imagen" name="imagen" required>
+            <label for="imagen">Imagen (ruta relativa)</label>
+            <input type="text" id="imagen" name="imagen" placeholder="../images/logos/logoPrincipalMinimalista.png"
+                required />
 
             <button type="submit">Agregar plato</button>
         </form>
