--- a/html/singIn.html
+++ b/html/singIn.html
@@ -48,6 +48,7 @@
          <input type="password" id="password" name="password" required>
 
          <button type="submit">Registrarse</button>
+          <p class="form-text">¿Ya tienes una cuenta? <a href="login.html">Ingresa</a></p>
      </form>
   </div>
 
