--- a/soberbio/html/admind.html
+++ b/soberbio/html/admind.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrar menú</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <input type="number" id="precio" name="precio" required>
 
             <label for="imagen">Imagen (ruta relativa)</label>
-            <input type="text" id="imagen" name="imagen" placeholder="../images/logos/logoPrincipalMinimalista.png"
+            <input type="text" id="imagen" name="imagen" placeholder="../public/images/logos/logoPrincipalMinimalista.png"
                 required />
 
             <button type="submit">Agregar plato</button>
@@ -30,7 +30,7 @@
         <ul id="platos-list"></ul>
     </div>
 
-    <script src="../js/admin.js"></script>
+    <script src="../public/js/admin.js"></script>
 </body>
 
 </html>
