--- a/soberbio/html/inicio.html
+++ b/soberbio/html/inicio.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="bistró, contemporáneo, Bogotá, experiencia culinaria" />
     <meta name="robots" content="index, follow" />
 
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../public/css/styles.css">
 
 </head>
 
@@ -22,7 +22,8 @@
     <nav class="navbar">
         <!-- Logo superior que lleva a la página de inicio -->
         <a href="inicio.html" id="logo-superior">
-            <img src="../images/logos/logoPrincipalMinimalista.png" height="120" alt="Logo SOBERBIO" />
+            <img src="../public/images/logos/logoPrincipalMinimalista.png" height="120" alt="Logo SOBERBIO" />
+    
         </a>
 
         <!-- Acciones de navegación: botón reservar y hamburguesa -->
@@ -53,7 +54,7 @@
     <div id="presentacion">
 
         <a id="logo-principal">
-            <img src="../images/logos/logoPrincipal.png" alt="Logo principal" height="500" />
+            <img src="../public/images/logos/logoPrincipal.png" alt="Logo principal" height="500" />
         </a>
     </div>
 
@@ -71,7 +72,7 @@
             </div>
 
             <!-- Imagen de equipo de cocina -->
-            <img src="../images/personas/cocineros.png" alt="cocineros" />
+            <img src="../public/images/personas/cocineros.png" alt="cocineros" />
         </section>
 
 
@@ -95,7 +96,7 @@
             </div>
 
             <!-- Imagen de comedor -->
-            <img src="../images/personas/comedor.png" height="400px" alt="comedor">
+            <img src="../public/images/personas/comedor.png" height="400px" alt="comedor">
         </section>
 
 
@@ -108,7 +109,7 @@
                 inspiran cada creación culinaria para mostrar la biodiversidad de Colombia.</p>
 
             <!-- Imagen de platos/inspiraciones -->
-            <img src="../images/platos/inspiraciones.png" height="600px" alt="Inspiración">
+            <img src="../public/images/platos/inspiraciones.png" height="600px" alt="Inspiración">
         </section>
 
 
@@ -128,7 +129,7 @@
             </div>
 
             <!-- Imagen del chef -->
-            <img src="../images/personas/chef.png" height="600px" alt="Chef">
+            <img src="../public/images/personas/chef.png" height="600px" alt="Chef">
         </section>
 
 
@@ -141,7 +142,7 @@
                 servicio, sea excepcional.</p>
 
             <!-- Imagen del equipo -->
-            <img src="../images/personas/equipo.png" height="600px" alt="Equipo">
+            <img src="../public/images/personas/equipo.png" height="600px" alt="Equipo">
         </section>
 
 
@@ -178,7 +179,7 @@
             </div>
 
             <!-- Imagen de premiación -->
-            <img src="../images/personas/chefPremio.png" height="600px" alt="Awards">
+            <img src="../public/images/personas/chefPremio.png" height="600px" alt="Awards">
         </section>
 
 
@@ -230,7 +231,7 @@
     <footer>
         <!-- Logo del footer que devuelve a inicio -->
         <a href="inicio.html">
-            <img src="../images/logos/logoPrincipal.png" height="150" alt="Logo SOBERBIO" title="Inicio" />
+            <img src="../public/images/logos/logoPrincipal.png" height="150" alt="Logo SOBERBIO" title="Inicio" />
         </a>
 
         <!-- Enlaces internos de navegación -->
@@ -247,19 +248,19 @@
         <!-- Redes sociales -->
         <div class="social">
             <a href="https://www.instagram.com/soberbio.bistro/" target="_blank"><img
-                    src="../images/logos/instagram.png" height="40" alt="Instagram" title="Instagram"></a>
-            <a href="https://wa.me/573155095645" target="_blank"><img src="../images/logos/whatsapp.png" height="40"
+                    src="../public/images/logos/instagram.png" height="40" alt="Instagram" title="Instagram"></a>
+            <a href="https://wa.me/573155095645" target="_blank"><img src="../public/images/logos/whatsapp.png" height="40"
                     alt="WhatsApp" title="WhatsApp"></a>
-            <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../images/logos/facebook.png"
+            <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../public/images/logos/facebook.png"
                     height="40" alt="Facebook" title="Facebook"></a>
             <a href="https://apps.apple.com/es/app/facetime/id1110145091" target="_blank"><img
-                    src="../images/logos/phone.png" height="40" alt="Teléfono" title="Teléfono"></a>
+                    src="../public/images/logos/phone.png" height="40" alt="Teléfono" title="Teléfono"></a>
             <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img
-                    src="../images/logos/location.png" height="40" alt="Maps" title="Maps"></a>
+                    src="../public/images/logos/location.png" height="40" alt="Maps" title="Maps"></a>
         </div>
     </footer>
 
 </body>
-<script src="../js/script.js"></script>
+<script src="../public/js/script.js"></script>
 
 </html>
