--- a/soberbio/html/reservar.html
+++ b/soberbio/html/reservar.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Reservar - Soberbio</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 
 <body>
@@ -14,20 +14,20 @@
   <div id="toolbar">
     <div class="left">
       <a href="../html/inicio.html" id="logo-superior">
-        <img id="toolbar-logo" src="../images/logos/logoPrincipalOscuro.png"  alt="Soberbio">
+        <img id="toolbar-logo" src="../public/images/logos/logoPrincipalOscuro.png"  alt="Soberbio">
       </a>
     
     </div>
 
     <div class="right">
       <a href="https://www.instagram.com/soberbio.bistro/" target="_blank" title="Instagram">
-        <img class="icon" src="../images/logos/instagramOscuro.svg" alt="Instagram">
+        <img class="icon" src="../public/images/logos/instagramOscuro.svg" alt="Instagram">
       </a>
       <a href="https://wa.me/573155095645" target="_blank" title="WhatsApp">
-        <img class="icon" src="../images/logos/whatsappOscuro.svg" alt="WhatsApp">
+        <img class="icon" src="../public/images/logos/whatsappOscuro.svg" alt="WhatsApp">
       </a>
       <a href="https://www.facebook.com/soberbio.bistro" target="_blank" title="Facebook">
-        <img class="icon" src="../images/logos/facebookOscuro.svg" alt="Facebook">
+        <img class="icon" src="../public/images/logos/facebookOscuro.svg" alt="Facebook">
       </a>
       <a href="../html/login.html" id="login-button">
         <button>Iniciar Sesión</button>
@@ -99,7 +99,7 @@
   <hr>
   <footer>
     <a href="inicio.html">
-      <img src="../images/logos/logoPrincipal.png" height="150" alt="Logo SOBERBIO" title="Inicio" />
+      <img src="../public/images/logos/logoPrincipal.png" height="150" alt="Logo SOBERBIO" title="Inicio" />
     </a>
 
     <ul>
@@ -113,14 +113,14 @@
     </ul>
 
     <div class="social">
-      <a href="https://www.instagram.com/soberbio.bistro/" target="_blank"><img src="../images/logos/instagram.png" height="40" alt="Instagram"></a>
-      <a href="https://wa.me/573155095645" target="_blank"><img src="../images/logos/whatsapp.png" height="40" alt="WhatsApp"></a>
-      <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../images/logos/facebook.png" height="40" alt="Facebook"></a>
-      <a href="https://apps.apple.com/es/app/facetime/id1110145091" target="_blank"><img src="../images/logos/phone.png" height="40" alt="Teléfono"></a>
-      <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img src="../images/logos/location.png" height="40" alt="Maps"></a>
+      <a href="https://www.instagram.com/soberbio.bistro/" target="_blank"><img src="../public/images/logos/instagram.png" height="40" alt="Instagram"></a>
+      <a href="https://wa.me/573155095645" target="_blank"><img src="../public/images/logos/whatsapp.png" height="40" alt="WhatsApp"></a>
+      <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../public/images/logos/facebook.png" height="40" alt="Facebook"></a>
+      <a href="https://apps.apple.com/es/app/facetime/id1110145091" target="_blank"><img src="../public/images/logos/phone.png" height="40" alt="Teléfono"></a>
+      <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img src="../public/images/logos/location.png" height="40" alt="Maps"></a>
     </div>
   </footer>
 
-  <script src="../js/script.js"></script>
+  <script src="../public/js/script.js"></script>
 </body>
 </html>
