--- a/soberbio/html/singIn.html
+++ b/soberbio/html/singIn.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  
-<title>Iniciar sesión - Soberbio</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Registro - Soberbio</title>
+  <link rel="stylesheet" href="../public/css/styles.css">
 </head>
-<body class="login-page">
+<body class="signin-page">
   <!-- ====== NAVBAR / ENCABEZADO ====== -->
   <nav class="navbar">
       <!-- Logo superior que lleva a la página de inicio -->
       <a href="inicio.html" id="logo-superior">
-          <img src="../images/logos/logoPrincipalMinimalista.png" height="120" alt="Logo SOBERBIO" />
-      </a> <link rel="stylesheet" href="../css/styles.css" />
+          <img src="../public/images/logos/logoPrincipalMinimalista.png" height="120" alt="Logo SOBERBIO" />
+      </a>
+
       <!-- Acciones de navegación: botón reservar y hamburguesa -->
       <div class="nav-actions">
           <a href="reservar.html" class="btn-reservar-top">RESERVAR</a>
+
           <!-- Botón hamburguesa para abrir/cerrar el menú en móviles -->
           <button id="menu-toggle" class="menu-toggle" aria-label="Menú">
               <span></span>
@@ -33,17 +36,19 @@
     </ul>
   </div>
 
-  <div class="login-form">
+  <div class="signin-form">
      <form>
+         <label for="name">Nombre</label>
+         <input type="text" id="name" name="name" required>
+
          <label for="email">Correo</label>
          <input type="email" id="email" name="email" required>
 
          <label for="password">Contraseña</label>
          <input type="password" id="password" name="password" required>
 
-         <button type="submit">Iniciar sesión</button>
-
-         <p>¿No tienes una cuenta? <a href="singIn.html">Regístrate</a></p>
+         <button type="submit">Registrarse</button>
+          <p class="form-text">¿Ya tienes una cuenta? <a href="login.html">Ingresa</a></p>
      </form>
   </div>
 
@@ -51,7 +56,7 @@
   <hr>
   <footer>
     <a href="inicio.html">
-      <img src="../images/logos/logoPrincipal.png" height="150" alt="Logo SOBERBIO" title="Inicio" />
+      <img src="../public/images/logos/logoPrincipal.png" height="150" alt="Logo SOBERBIO" title="Inicio" />
     </a>
 
     <ul>
@@ -65,14 +70,14 @@
     </ul>
 
     <div class="social">
-      <a href="https://www.instagram.com/soberbio.bistro/" target="_blank"><img src="../images/logos/instagram.png" height="40" alt="Instagram"></a>
-      <a href="https://wa.me/573155095645" target="_blank"><img src="../images/logos/whatsapp.png" height="40" alt="WhatsApp"></a>
-      <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../images/logos/facebook.png" height="40" alt="Facebook"></a>
-      <a href="https://apps.apple.com/es/app/facetime/id1110145091" target="_blank"><img src="../images/logos/phone.png" height="40" alt="Teléfono"></a>
-      <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img src="../images/logos/location.png" height="40" alt="Maps"></a>
+      <a href="https://www.instagram.com/soberbio.bistro/" target="_blank"><img src="../public/images/logos/instagram.png" height="40" alt="Instagram"></a>
+      <a href="https://wa.me/573155095645" target="_blank"><img src="../public/images/logos/whatsapp.png" height="40" alt="WhatsApp"></a>
+      <a href="https://www.facebook.com/soberbio.bistro" target="_blank"><img src="../public/images/logos/facebook.png" height="40" alt="Facebook"></a>
+      <a href="https://apps.apple.com/es/app/facetime/id1110145091" target="_blank"><img src="../public/images/logos/phone.png" height="40" alt="Teléfono"></a>
+      <a href="https://www.google.com/maps/place/SOBERBIO/" target="_blank"><img src="../public/images/logos/location.png" height="40" alt="Maps"></a>
     </div>
   </footer>
 
-  <script src="../js/script.js"></script>
+  <script src="../public/js/script.js"></script>
 </body>
 </html>
